<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">XiaomiParts</string>
    <string name="advanced_settings">XiaomiParts</string>
    <string name="advanced_settings_summary">Additional device specific settings</string>
    <string name="category_vibrator">Vibrator</string>
    <string name="vib_strength_title_head">Strength of the vibrator</string>
    <string name="category_torch">Torch</string>
    <string name="yellow_torch_brightness_title_head">Yellow led maximum brightness</string>
    <string name="white_torch_brightness_title_head">White led maximum brightness</string>
    <string name="touchscreen_title">Touchscreen</string>
    <string name="glove_mode_title">Glove Mode</string>
    <string name="glove_mode_summary">Increase touch sensitivity (May decrease battery life)</string>
    <string name="graphics_title">Graphics</string>
    <string name="kcal_title">Display color</string>
    <string name="kcal_summary">Display color calibration using KCAL</string>
    <string name="kcal_enabled_title">Enable KCAL</string>
    <string name="kcal_enabled_summary">Turn on display calibration using KCAL</string>
    <string name="kcal_red">Red</string>
    <string name="kcal_green">Green</string>
    <string name="kcal_blue">Blue</string>
    <string name="kcal_saturation">Saturation</string>
    <string name="kcal_contrast">Constrast</string>
    <string name="kcal_value">Value</string>
    <string name="kcal_hue">Hue</string>
    <string name="kcal_invert_title">Invert</string>
    <string name="kcal_invert_summary">Invert all screen colors</string>
    <string name="kcal_greyscale_title">Greyscale</string>
    <string name="kcal_greyscale_summary">Fully disable saturation</string>
    <string name="menu_reset">Reset</string>
    <string name="presets_list_title">Load KCAL preset</string>
    <string name="default_values">Default</string>
    <string name="version_1">Version 1</string>
    <string name="version_2">Version 2</string>
    <string name="version_3">Version 3</string>
    <string name="triluminous">Triluminous</string>
    <string name="deep_black_and_white">Deep Black and White</string>
    <string name="deep_natural">Deep Natural</string>
    <string name="cool_amoled">Cool Amoled</string>
    <string name="extreme_amoled">Extreme Amoled</string>
    <string name="warm_amoled">Warm Amoled</string>
    <string name="hybrid_mamba">Hybrid Mamba</string>

    <!-- Spectrum Profiles -->
    <string name="spectrum_profile_title">Spectrum</string>
    <string name="spectrum_title">Profile</string>
    <string name="spectrum_dialogTitle">Choose your spectrum profile</string>

    <!-- usb fastcharge -->
    <string name="usb_fastcharge_title">USB Fastcharge</string>
    <string name="fastcharge_title">Enable USB Fastcharge</string>
    <string name="fastcharge_summary">Use fastcharge when connected to a computer via usb port</string>

    <!-- wakeup fix -->
    <string name="category_wakeup">Fingerprint</string>
    <string name="slow_wakeup_fix_title">Improve wakeup speed</string>
    <string name="slow_wakeup_fix_summary">Disabled by default as it drains battery!!!</string>

    <!-- Charging Limiter -->
    <string name="battery_charging_limiter_title">Battery</string>
    <string name="battery_charging_limiter_desc">Set limit to stop battery charging</string>

</resources>
