<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2014-2016 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.com/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/battery_charging_limiter_title">
        <com.lineageos.settings.device.BatteryChargingLimiterPreference
            android:key="battery_charging_limite"
            android:title="@string/battery_charging_limiter_desc" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_wakeup">
        <SwitchPreference
            android:key="slow_wakeup_fix"
            android:title="@string/slow_wakeup_fix_title"
            android:summary="@string/slow_wakeup_fix_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/graphics_title">
        <PreferenceScreen
            android:key="kcal"
            android:fragment="com.lineageos.settings.device.DisplayCalibration"
            android:summary="@string/kcal_summary"
            android:title="@string/kcal_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="spectrum_profile"
        android:title="@string/spectrum_profile_title" >

        <ListPreference
            android:key="spectrum"
            android:title="@string/spectrum_title"
            android:defaultValue="0"
            android:entries="@array/spectrum_profiles"
            android:entryValues="@array/spectrum_values"
            android:dialogTitle="@string/spectrum_dialogTitle" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_vibrator">
        <com.lineageos.settings.device.VibratorStrengthPreference
            android:key="vib_strength"
            android:title="@string/vib_strength_title_head" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_torch">
        <com.lineageos.settings.device.YellowTorchBrightnessPreference
            android:key="yellow_torch_brightness"
            android:title="@string/yellow_torch_brightness_title_head" />
        <com.lineageos.settings.device.WhiteTorchBrightnessPreference
            android:key="white_torch_brightness"
            android:title="@string/white_torch_brightness_title_head" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/touchscreen_title">
        <SwitchPreference
            android:key="glove_mode"
            android:title="@string/glove_mode_title"
            android:summary="@string/glove_mode_summary"
            android:icon="@null"
            android:paddingLeft="0dp"
            android:persistent="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="usb_fastcharge"
        android:title="@string/usb_fastcharge_title" >
        <SwitchPreference
            android:key="fastcharge"
            android:defaultValue="false"
            android:title="@string/fastcharge_title"
            android:summary="@string/fastcharge_summary" />
    </PreferenceCategory>

</PreferenceScreen>
